examples/test/testpolicy19102.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19102
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key30: value6
      key27: value38
      key11: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value49
          key12: value32
      podSelector:
        matchLabels:
          key27: value47
          key26: value33
